# chat-client

./: .flake8  .gitignore  AGENTS.md  README.md  alembic.ini  package.json  platform_test.py  playwright.config.js  playwright.config.ts  pyproject.toml  requirements.txt  run-all-tests.sh  test_api_endpoint.py  test_message_model.py  test_server_startup.py  test_update_message.py
.github/: copilot-instructions.md
chat_client/: __init__.py  __main__.py  cli.py  config-dist.py  main.py  models.py  routes.py
chat_client/core/: api_utils.py  attachments.py  base_context.py  bootstrap.py  chat_message_utils.py  chat_service.py  config_utils.py  exceptions.py  exceptions_validation.py  flash.py  http.py  logging.py  mcp_client.py  middleware.py  model_capabilities.py  send_mail.py  session.py  set_system_path.py  templates.py  tool_config.py  tool_executor.py  usage_filters.py  usage_pricing.py  user_session.py
chat_client/database/: cache.py  db_session.py  migration.py
chat_client/endpoints/: chat_attachment_endpoints.py  chat_dialog_endpoints.py  chat_endpoints.py  chat_page_endpoints.py  chat_stream_endpoints.py  endpoints_chat.py  endpoints_user.py  error_endpoints.py  prompt_endpoints.py  user_auth_endpoints.py  user_dialog_endpoints.py  user_endpoints.py  user_profile_endpoints.py  user_usage_endpoints.py
chat_client/migrations/: env.py
chat_client/models/: chat_model.py  token_model.py  user_model.py
chat_client/repositories/: attachment_repository.py  chat_repository.py  image_repository.py  prompt_repository.py  token_repository.py  user_repository.py
chat_client/schemas/: __init__.py  chat.py  prompt.py
chat_client/templates/: base.html
chat_client/tools/: __init__.py  google_search_tool.py  python_exec.py  python_runtime.py  python_tool.py  registry.py  tools_utils.py  wikipedia_tool.py
docs/: chat-client.service  mcp.md  notes.md  prompts.md
e2e/: README.md  example.spec.js  pages.spec.js
migrations/: env.py
migrations/versions/: 125b55cb2626_initial_migration.py
sandbox/: README.md  build_python_tool.sh  build_secure_python.sh  chat_client_python_tool.Dockerfile  run_secure_python.sh  secure_python.Dockerfile
tests/: README.md  conftest.py  run_all_tests.py  test_api_utils.py  test_base.py  test_bootstrap.py  test_chat_endpoints.py  test_chat_repository.py  test_chat_service.py  test_cli.py  test_config.py  test_error_endpoints.py  test_gemini.py  test_logging.py  test_mcp_client.py  test_message_edit.py  test_model_capabilities.py  test_prompt_endpoints.py  test_python_tool.py  test_runner.py  test_starlette_comprehensive.py  test_starlette_simple.py  test_tool_config.py  test_user_endpoints.py  test_user_repository.py  test_wikipedia_tool.py
tests/e2e/: README.md  auth-login.spec.ts  chat-send-message.spec.ts  console-smoke.spec.ts  dialogs-delete-confirm.spec.ts  navigation-menu.spec.ts  prompt-from-id.spec.ts
(+98 files in other folders)
